--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body 
 {
     color: blue;
-    color: red;
+    color: yellow;
     text-align: center;
     font-family: Arial;
     font-size: 16xp;
