--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,25 +1,37 @@
-body 
+body
 {
-    color: black;
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: Arial;
-    font-size: 16xp;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
+
 #cabecera
 {
-    background-color: #33A;
-    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.75);
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5cm;
+    padding: 0.5em;
 }
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline
 {
-    padding: 1cm 0 0 0;
+    padding: 0 0 0 1em;
     font-weight: normal;
-    font-size: 0.8cm;
+    font-size: 0.8em;
 }
+
 #container
 {
     width: 70%;
@@ -28,11 +40,13 @@ body
     border: 1px solid #DDD;
     margin: 0 auto;
 }
+
 #container h1
 {
-    font-size: 20xp;
+    font-size: 20px;
 }
 #post
 {
-    padding: 1cm;
+    background: white;
+    padding: 1em;
 }
