--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,7 +16,7 @@ body
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5cm;
 }
 
 #cabecera #logo
@@ -27,9 +27,9 @@ body
 
 #cabecera #tagline
 {
-    padding: 0 0 0 1em;
+    padding: 0 0 0 1cm;
     font-weight: normal;
-    font-size: 0.8em;
+    font-size: 0.8cm;
 }
 
 #container
@@ -47,6 +47,7 @@ body
 }
 #post
 {
+    background: white;
     padding: 1cm;
 }
 #footer
